sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var taille=getNombreValeurs()
  for (i<-0 to taille) {
    setValeur(i,j)
    if plusPetitQue(i,j) {
      echange(i,i+1)
    }
  }
}